# editables

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  Coverage.txt  LICENSE.txt  MANIFEST.in  README.md  bump_release.py  noxfile.py  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: other.yml  pre-commit.yml  publish.yml  tests.yml
docs/source/: conf.py  implementation.md  index.md  scope.md  usage.md  use-cases.md
experiment/: foo.py
experiment/data/foo/: __init__.py
experiment/data/foo/bar/: __init__.py
src/editables/: __init__.py  install_hook.py  redirector.py
tests/: requirements.txt  test_editable.py  test_redirects.py  test_version.py
