[metadata]
name = editables
description = Editable installations
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pfmoore/editables
author = Paul Moore
license = MIT
license_file = LICENSE
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Software Development :: Libraries
    Topic :: Utilities
author-email = gaborjbernat@gmail.com
keywords = virtual, environments, isolated
maintainer = Paul Moore
maintainer-email = paul-moore@gmail.com
project_urls =
    Source=https://github.com/pypa/editables
    Tracker=https://github.com/pypa/editables/issues

[options]
packages = find:
python_requires = >=3.5
package_dir =
    =src
zip_safe = True

[options.extras_require]
testing =
    pytest >= 4
    coverage >= 5
    coverage_enable_subprocess >= 1
    pytest-xdist >= 1.31.0
    pytest-mock >= 2
    pytest-env >= 0.6.2
    pytest-randomly >= 1
    pytest-timeout >= 1.3.4
    virtualenv >= 20

[options.packages.find]
where = src

[sdist]
formats = gztar

[bdist_wheel]
universal = true

[tool:pytest]
junit_family = xunit2
addopts = --tb=auto -ra --showlocals
env =
    PYTHONWARNINGS=ignore:DEPRECATION::pip._internal.cli.base_command
    PYTHONIOENCODING=utf-8
